--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@ layout: default
 	    </div>
 	    <div class="col-md-1">
 	    	<a class="socials_links twitter" href="https://twitter.com/lausanne2020" target="_blank" rel="noopener">
-	      	    <img height="50" src="/images/layout/Twitter-wh-icon.png">
+	      	    <img height="50" style="margin-top: 6px;" src="/images/layout/Twitter-wh-icon.png">
 	    	</a>
 	    </div>
 	    <div class="col-md-1">
 	    	<a class="socials_links youtube" href="https://www.youtube.com/channel/UCcEgzQvjtLp7UCdsXfuHbyQ" target="_blank" rel="noopener">
-	      	    <img height="50" src="/images/layout/YouTube-wh-icon.png">
+	      	    <img height="40" style="margin-top: 10px;" src="/images/layout/YouTube-wh-icon.png">
 	    	</a>
 	    </div>
         </div>
@@ -155,7 +155,7 @@ layout: default
                 <img height="80" src="/images/layout/Beijing_2022_emblem.jpg">
             </a>
         </div>
-        <div class="col-md-2 col-md-offset-2 col-xs-6">
+        <div class="col-md-2 col-md-offset-4 col-xs-6">
             <a href="http://paris2024.org/" target="_blank" rel="noopener">
                 <img height="80" src="/images/home/Paris.jpg">
             </a>
@@ -169,7 +169,7 @@ layout: default
 </div>
 <div class="cio-sponsors">
     <div class="container">
-        <img src="/images/cio-partners/logo_olympic.png" alt="olympic" class="come-in-module">
+        <img src="/images/cio-partners/logo_olympic.png" alt="olympic" class="come-in-module" style="padding-top: 40px;">
         <ul class="sponsors-list come-in-module">
             <li>
                 <img src="/images/cio-partners/Coca-Cola_logo_200.png" alt="Coca-Cola">
