--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@ layout: default
       </div>
       <div class="col-md-6">
         <img class="img-contact hidden-sm" sizes="(max-width: 991px) 100vw, 620px" src="/images/contact/lausanne_overview.jpg" srcset="/images/contact/lausanne_overview-500x313.jpg 500w, /images/contact/lausanne_overview-800x500.jpg 800w, /images/contact/lausanne_overview-1080x675.jpg 1080w, /images/contact/lausanne_overview-1600x1000.jpg 1600w, /images/contact/lausanne_overview.jpg 1680w" width="100%">
-        <p class="physique"><strong>Lausanne 2020</strong><br>Comité d'organisation<br>Maison du Sport International<br>Av. de Rhodanie 54, 1007, Lausanne</p>
+        <p class="physique"><strong>Lausanne 2020</strong><br>Comité d'organisation<br>Place des médailles<br>Rue du Port-Franc 22<br>1003 Lausanne, Suisse/Switzerland</p>
       </div>
     </div>
   </div>
